commit by anurag

--- a/style.css
+++ b/style.css
@@ -38,12 +38,20 @@
 
 html{
     font-size: 62.5%;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 body {
     background-color: var(--light-bg);
     padding-left: 30rem;
+}
+
+body.dark{
+    --white: #222;
+    --black: #fff;
+    --light-color: #aaa;
+    --light-bg: #333;
+    --border:.1rem solid rgba(255,255,255,.2);
 }
 
 body.active{
@@ -97,6 +105,15 @@ section {
 .flex-btn {
     display: flex;
     gap: 1rem;
+}
+
+.heading {
+    padding-bottom: 1.8rem;
+    border-bottom: var(--border);
+    font-size: 2.5rem;
+    color: var(--black);
+    text-transform: capitalize;
+    margin-bottom: 2rem;
 }
 
 .header {
@@ -298,6 +315,178 @@ section {
     left: -30rem;
 }
 
+.quick-selection .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(27rem,1fr));
+    gap:1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.quick-selection .box-container .box{
+    border-radius: .5rem;
+    background-color: var(--white);
+    padding: 2rem;
+}
+
+.quick-selection .box-container .box .title{
+    font-size: 2rem;
+    color: var(--black);
+
+}
+
+.quick-selection .box-container .box .title p span{
+    color: var(--main-color);
+}
+
+.quick-selection .box-container .tutor {
+    text-align: center;
+    line-height: 1.5;
+    padding: 1.5rem;
+    color: var(--light-color);
+    font-size: 1.8rem;
+}
+
+.quick-selection .box-container .tutor p{
+    padding-bottom: 1rem;
+}
+
+.quick-selection .box-container .box .flex{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding-top: 1.5rem;
+}
+
+.quick-selection .box-container .box .flex a{
+    padding: 1rem 1.5rem;
+    border-radius: .5rem;
+    font-size: 1.6rem;
+    background-color: var(--light-bg);
+    color: var(--main-color);
+}
+
+.quick-selection .box-container .box .flex a i{
+    margin-right: 1rem;
+    color: var(--black);
+}
+
+.quick-selection .box-container .box .flex a span{
+    color: var(--light-color);
+}
+
+.quick-selection .box-container .box .flex a:hover{
+    background-color: var(--black);
+}
+
+.quick-selection .box-container .box .flex a:hover i{
+    color: var(--white);
+}
+
+.quick-selection .box-container .box .flex a:hover span{
+    color: var(--white);
+}
+
+.course .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem,1fr));
+    gap:1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.course .box-container .box{
+    border-radius: .5rem;
+    background-color: var(--white);
+    padding: 2rem;
+}
+
+.course .box-container .box .tutor{
+    margin-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.course .box-container .box .tutor img{
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+}
+
+.course .box-container .box .tutor h3{
+    font-size: 2rem;
+    color: var(--black);
+    margin-bottom: .2rem;
+}
+
+.course .box-container .box .tutor span{
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+
+.course .box-container .box .thumb{
+    width: 100%;
+    border-radius: .5rem;
+    height: 20rem;
+    object-fit: cover;
+}
+
+.course .box-container .box .title{
+    font-size: 2rem;
+    color: var(--black);
+    margin-top: .5rem;
+    padding: .5rem 0;
+}
+
+.course .more-btn{
+    margin-top: 2rem;
+    text-align: center;
+    display: block;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.hidden{
+    display: none;
+}
+
+.back-btn{
+    border-radius: .5rem;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    color: var(--white);
+    text-transform: capitalize;
+    background-color: var(--orange);
+    cursor: pointer;
+}
+
+.back-btn:hover{
+    background-color: var(--black);
+    color: var(--white);
+}
+
+.back-option-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 1.8rem;
+    border-bottom: var(--border);
+    font-size: 2.5rem;
+    color: var(--black);
+    text-transform: capitalize;
+    margin-bottom: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -364,5 +553,14 @@ section {
 @media (max-width: 450px) {
     html{
         font-size: 50%;
+    }
+
+    .heading{
+        font-size: 2rem;
+    }
+
+    .flex-btn{
+        flex-flow: column;
+        gap: 0;
     }
 }
