--- a/style.css
+++ b/style.css
@@ -285,28 +285,28 @@ section {
     margin-top: 1rem;
 }
 
-.side-bar .nav-bar ul li a{
+.side-bar .nav-bar a{
     display: block;
     padding: 2rem;
     margin: .5rem 0;
     font-size: 1.8rem;
 }
 
-.side-bar .nav-bar ul li a i{
+.side-bar .nav-bar a i{
     color: var(--main-color);
     transition: .3s linear;
 }
 
-.side-bar .nav-bar ul li a span {
+.side-bar .nav-bar a span {
     color: var(--light-color);
     margin-left: 1.5rem;
 }
 
-.side-bar .nav-bar ul li a:hover {
+.side-bar .nav-bar a:hover {
     background-color: var(--light-bg);
 }
 
-.side-bar .nav-bar ul li a:hover span{ 
+.side-bar .nav-bar a:hover span{ 
     margin-left: 2.5rem;
     transition: .3s;
 }
@@ -451,44 +451,221 @@ section {
     display: none;
 }
 
-.back-btn{
-    border-radius: .5rem;
-    padding: 1rem 3rem;
-    font-size: 1.8rem;
-    color: var(--white);
-    text-transform: capitalize;
-    background-color: var(--orange);
-    cursor: pointer;
-}
-
-.back-btn:hover{
-    background-color: var(--black);
-    color: var(--white);
-}
-
-.back-option-btn {
+.about .row{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding-bottom: 1.8rem;
-    border-bottom: var(--border);
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+
+.about .row .image{
+    flex: 1 1 40rem;    
+}
+
+.about .row .image img{
+    width: 100%; 
+    height: 50rem;   
+}
+
+.about .row .content{
+    flex: 1 1 40rem;    
+    text-align: center;
+}
+
+.about .row .content h3{
     font-size: 2.5rem;
+    color: var(--black);    
+}
+
+.about .row .content p{
+    line-height: 2;
+    font-size: 1.7rem;
+    color: var(--light-color);
+    padding: 1rem 0;
+}
+
+.about .box-container{
+    margin-top: 3rem;
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+
+.about .box-container .box{
+    flex: 1 1 20rem;                    /*important*/
+    display: flex;
+    align-items: center;
+    background-color: var(--white);
+    border-radius: .5rem;
+    padding: 2rem;
+    gap: 2rem;
+}
+
+.about .box-container .box i{
+    font-size: 2.5rem;
+    color: var(--main-color);
+}
+
+.about .box-container .box span{
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+
+.reviews .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem,1fr));  /*important*/
+    gap:1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.reviews .box-container .box{
+    border-radius: .5rem;
+    padding: 2rem;
+    background-color: var(--white);
+    padding-top: 1.5rem;
+}
+
+.reviews .box-container .box p{
+    line-height: 1.5;                      /* list-style important*/
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+
+.reviews .box-container .box .user{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.reviews .box-container .box .user img{
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.reviews .box-container .box .user h3{
+    font-size: 2rem;
     color: var(--black);
-    text-transform: capitalize;
-    margin-bottom: 2rem;
+    margin-bottom: .2rem;
+
+}
+
+.reviews .box-container .box .user .stars i{
+    color: var(--main-color);
+    font-size: 1.5rem;
+}
+
+.playlist .row{
+    display: flex;
+    align-items: center;
+    gap: 2.5rem;
+    flex-wrap: wrap;
+    padding: 2rem;
+    background-color: var(--white);
+}
+
+.playlist .row .col{
+    flex: 1 1 40rem;
+}
+
+.playlist .row .col .save-list button{
+    font-size: 2rem;
+    border-radius: .5rem;
+    background-color: var(--light-bg);
+    padding: 1.2rem 2.5rem;
+    cursor: pointer;
+    margin-bottom: 2rem;   
+}
+
+.playlist .row .col .save-list button i{
+    color: var(--black);
+    margin-right: 1rem;
 }
 
 
+.playlist .row .col .save-list button span{
+    color: var(--light-color);
+}
 
 
+.playlist .row .col .save-list button:hover{
+    background-color: var(--black);
+}
 
 
+.playlist .row .col .save-list button:hover i{
+    color: var(--white);
+}
 
 
+.playlist .row .col .save-list button:hover span{
+    background-color: var(--white); 
+}
 
 
+.playlist .row .col .thumb{
+    width:100%;
+    height: 30rem;
+    border-radius: .5rem;
+    object-fit: cover;
+}
 
+.playlist .row .col .tutor{
+    display: flex;
+    align-items: center;
+    gap: 1.7rem;
+}
 
+.playlist .row .col .tutor img{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.playlist .row .col .tutor h3{
+    font-size: 2rem;
+    color: var(--black);
+    margin-bottom: .2rem;
+}
+
+.playlist .row .col .tutor span{
+    color: var(--main-color);
+    font-size: 1.5rem;
+}
+
+.playlist .row .col .details{
+    padding: 2rem;
+}
+
+.playlist .row .col .details h3{
+    font-size: 2rem;
+    color: var(--black);
+}
+
+.playlist .row .col .details p{
+    padding: 1rem 0;
+    line-height: 2;
+    color: var(--light-color);
+    font-size: 1.7rem;
+}
+
+.playlist .row .col .date{
+    font-size: 2rem;
+    padding-top: .5rem;
+}
+
+.playlist .row .col .date i{
+    color: var(--main-color);
+    margin-right: 1rem;
+}
+
+.playlist .row .col .date span{
+    color: var(--light-color);
+}
 
 
 
@@ -563,4 +740,11 @@ section {
         flex-flow: column;
         gap: 0;
     }
+    .about .row .image img{
+        height: auto;
+    }
 }
+
+
+
+
