--- a/style.css
+++ b/style.css
@@ -938,6 +938,193 @@ section {
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);         /*important*/
 }
 
+.teachers .search-tutor{
+    margin-bottom: 3rem;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1.5rem 2rem;
+    background-color: var(--white);
+    border-radius: .5rem;
+}
+
+.teachers .search-tutor input{
+    width: 100%;
+    font-size: 1.8rem;
+    color: var(--black);
+    background: none;
+}
+
+.teachers .search-tutor button{
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--black);
+    background: none;
+}
+
+.teachers .search-tutor button:hover{
+    color: var(--main-color);
+}
+
+.teachers .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem,1fr));
+    gap:1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.teachers .box-container .box{
+    border-radius: .5rem;
+    padding: 2rem;
+    background-color: var(--white);
+}
+
+.teachers .box-container .box .tutor{
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.teachers .box-container .box .tutor img{
+    height: 5rem;
+    width: 5rem;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.teachers .box-container.box .tutor h3{
+    color: var(--black);
+    font-size: 2rem;
+    margin-bottom: .2rem;
+}
+
+.teachers .box-container .box .tutor span{
+    color: var(--main-color);
+    font-size: 1.5rem;
+}
+
+.teachers .box-container .box p{
+    padding-top: 1rem;
+    font-size: 1.7rem;
+    color: var(--light-color);
+}
+
+.teachers .box-container .box p span{
+    color: var(--main-color);
+}
+
+.teachers .box-container .offer{
+    text-align: center;
+}
+
+.teachers .box-container .offer h3{
+    font-size: 2rem;
+    color: var(--black);
+}
+
+.teachers .box-container .offer p{
+    line-height: 2;
+    padding: .5rem;
+}
+
+.tutor-profile .details{
+    background-color: var(--white);
+    border-radius: .5rem;
+    padding: 2rem;
+    text-align: center;
+}
+
+.tutor-profile .details .tutor{
+    margin-bottom: 2rem;
+}
+
+.tutor-profile .details .tutor img{
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: .5rem;
+}
+
+.tutor-profile .details .tutor h3{
+    font-size: 2rem;
+    color: var(--black);
+    margin: .5rem 0;
+}
+
+.tutor-profile .details .tutor span{
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+
+.tutor-profile .details .flex{
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.tutor-profile .details .flex p{
+    flex: 1 1 25rem;
+    border-radius: .5rem;
+    background-color: var(--light-bg);
+    padding: 1rem 3rem;
+    font-size: 2rem;
+    color: var(--light-color);
+}
+
+.tutor-profile .details .flex p span{
+    color: var(--main-color);
+}
+
+.contact .row{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.contact .row .image{
+    flex: 1 1 50rem;
+}
+
+.contact .row .image img{
+    height: 40rem;
+    width: 100%;
+}
+
+.contact .row form{
+    flex: 1 1 50rem;
+    background-color: var(--white);
+    border-radius: .5rem;
+    padding: 2rem;
+    text-align: center;
+}
+
+.contact .row form h3{
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    color: var(--black);
+
+}
+
+.contact .row form .box{
+    width: 100%;
+    margin: 1rem 0;
+    border-radius: .5rem;
+    background-color: var(--light-bg);
+    padding: 1.4rem;
+    color: var(--black);
+    font-size: 1.8rem;
+}
+
+
+
+
+
+
+
 
 
 
