--- a/style.css
+++ b/style.css
@@ -1083,6 +1083,7 @@ section {
     display: flex;
     align-items: center;
     gap: 1.5rem;
+    flex-wrap: wrap;
 }
 
 .contact .row .image{
@@ -1149,16 +1150,90 @@ section {
 
 .contact .box-container .box a{
     display: block;
-    margin-top: 1rem;
     font-size: 1.7rem;
     color: var(--light-color);
     line-height: 1.5;
     margin-top: .5rem;
 }
 
+.contact .box-container .box a:hover{
+    text-decoration: underline;
+    color: var(--main-color);
+}
+
+.profile .details{
+    background-color: var(--white);
+    border-radius: .5rem;
+    padding: 2rem;
+}
+
+.profile .details .user{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.profile .details .user img{
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: .5rem;
+}
+
+.profile .details .user h3{
+    font-size: 2rem;
+    margin: .5rem 0;
+    color: var(--black);
+}
+
+.profile .details .user p{
+    font-size: 1.7rem;
+    color: var(--light-color);
+}
 
 
+.profile .details .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    gap: 1.5rem;
+}
 
+.profile .details .box-container .box{
+    background-color: var(--light-bg);
+    flex: 1 1 30rem;
+    border-radius: .5rem;
+    padding: 2rem;
+}
+
+.profile .details .box-container .box .flex{
+    display: flex;
+    align-items: center;
+    gap: 1.7rem;
+    margin-bottom: 1rem;
+}
+
+.profile .details .box-container .box .flex i{
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: .5rem;
+    background-color: var(--black);
+    line-height: 4.4rem;
+    font-size: 2rem;
+    color: var(--white);
+    text-align: center;
+}
+
+.profile .details .box-container .box .flex h3{
+    font-size: 2rem;
+    color: var(--main-color);
+    margin-bottom: .2rem;
+}
+
+.profile .details .box-container .box .flex span{
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
 
 
 
@@ -1251,6 +1326,10 @@ section {
 
     .playlist .row .col .thumb{
         height: 20rem;
+    }
+
+    .contact .row .image img{
+        height: auto;
     }
 }
 
