--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --main-color: #8e44ad;
+    --main-color: #21a9ff;
     --red: #e74c3c;
     --orange: #f39c12;
     --white: #fff;
@@ -58,13 +58,13 @@ body.active{
     padding-left: 0;
 }
 
-section {
+section{
     padding: 2rem;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.btn, .option-btn, .delete-btn, .inline-btn, .inline-option-btn, .inline-delete-btn {
+.btn, .option-btn, .delete-btn, .inline-btn, .inline-option-btn, .inline-delete-btn{
     border-radius: .5rem;
     padding: 1rem 3rem;
     font-size: 1.8rem;
@@ -75,39 +75,41 @@ section {
     text-align: center;
 }
 
-.btn, .option-btn, .delete-btn {
+.btn, .option-btn, .delete-btn{
     display: block;
+    border-radius: 2rem;
     width: 100%;
 }
 
-.inline-btn, .inline-option-btn, .inline-delete-btn {
+.inline-btn, .inline-option-btn, .inline-delete-btn{
     display: inline-block;
+    border-radius: 26px;
 }
 
-.btn, .inline-btn {
+.btn, .inline-btn{
     background-color: var(--main-color);
 }
 
-.option-btn, .inline-option-btn {
+.option-btn, .inline-option-btn{
     background-color: var(--orange);
 }
 
-.delete-btn, .inline-delete-btn {
+.delete-btn, .inline-delete-btn{
     background-color: var(--red);
 
 }
 
-.btn:hover, .option-btn:hover, .delete-btn:hover, .inline-btn:hover, .inline-option-btn:hover, .inline-delete-btn:hover {
+.btn:hover, .option-btn:hover, .delete-btn:hover, .inline-btn:hover, .inline-option-btn:hover, .inline-delete-btn:hover{
     background-color: var(--black);
     color: var(--white);
 }
 
-.flex-btn {
+.flex-btn{
     display: flex;
     gap: 1rem;
 }
 
-.heading {
+.heading{
     padding-bottom: 1.8rem;
     border-bottom: var(--border);
     font-size: 2.5rem;
@@ -116,7 +118,7 @@ section {
     margin-bottom: 2rem;
 }
 
-.header {
+.header{
     background-color: var(--white);
     border-bottom: var(--border);
     position: sticky;
@@ -126,7 +128,7 @@ section {
     z-index: 1000;
 }
 
-.header .flex {
+.header .flex{
     padding: 1.5rem 2rem;
     position: relative;
     display: flex;
@@ -134,13 +136,13 @@ section {
     align-items: center;
 }
 
-.header .flex .logo {
+.header .flex .logo{
     font-size: 2.5rem;
-    color: var(--black);
+    color: var(--main-color);
     font-weight: bolder;
 }
 
-.header .flex .search-form {
+.header .flex .search-form{
     width: 50rem;
     border-radius: .5rem;
     display: flex;
@@ -150,21 +152,21 @@ section {
     background-color: var(--light-bg);
 }
 
-.header .flex .search-form input {
+.header .flex .search-form input{
     width: 100%;
     background: none;
     font-size: 2rem;
     color: var(--black);
 }
 
-.header .flex .search-form button {
+.header .flex .search-form button{
     font-size: 2rem;
     color: var(--black);
     cursor: pointer;
     background: none;
 }
 
-.header .flex .search-form button:hover {
+.header .flex .search-form button:hover{
     color: var(--main-color);
 }
 
@@ -289,13 +291,16 @@ section {
     display: block;
     padding: 2rem;
     margin: .5rem 0;
+    border-radius: 2rem;
     font-size: 1.8rem;
+    transition: .2s linear;
 }
 
 .side-bar .nav-bar a i{
     color: var(--main-color);
-    transition: .3s linear;
+    transition: .2s linear;
 }
+
 
 .side-bar .nav-bar a span {
     color: var(--light-color);
@@ -304,10 +309,11 @@ section {
 
 .side-bar .nav-bar a:hover {
     background-color: var(--light-bg);
+    font-size: 2.2rem;
 }
 
 .side-bar .nav-bar a:hover span{ 
-    margin-left: 2.5rem;
+
     transition: .3s;
 }
 
@@ -325,7 +331,7 @@ section {
 }
 
 .quick-selection .box-container .box{
-    border-radius: .5rem;
+    border-radius: 2rem;
     background-color: var(--white);
     padding: 2rem;
 }
@@ -333,7 +339,6 @@ section {
 .quick-selection .box-container .box .title{
     font-size: 2rem;
     color: var(--black);
-
 }
 
 .quick-selection .box-container .box .title p span{
@@ -361,7 +366,7 @@ section {
 
 .quick-selection .box-container .box .flex a{
     padding: 1rem 1.5rem;
-    border-radius: .5rem;
+    border-radius: 2rem;
     font-size: 1.6rem;
     background-color: var(--light-bg);
     color: var(--main-color);
@@ -384,6 +389,12 @@ section {
     color: var(--white);
 }
 
+.quick-selection .box-container .box p{
+    font-size: 1.7rem;
+    margin-top: 1rem;
+    color: var(--black);
+}
+
 .quick-selection .box-container .box .flex a:hover span{
     color: var(--white);
 }
@@ -397,7 +408,7 @@ section {
 }
 
 .course .box-container .box{
-    border-radius: .5rem;
+    border-radius: 2rem;
     background-color: var(--white);
     padding: 2rem;
 }
@@ -428,7 +439,7 @@ section {
 
 .course .box-container .box .thumb{
     width: 100%;
-    border-radius: .5rem;
+    border-radius: 2rem;
     height: 20rem;
     object-fit: cover;
 }
